structuring file system for better readbility

--- a/Dockerfile.service
+++ b/Dockerfile.service
@@ -1,6 +1,8 @@
 FROM public.ecr.aws/lambda/python:3.9
 
 COPY service_handler.py ${LAMBDA_TASK_ROOT}
+COPY llm_format_convertion.py .
+COPY utils.py .
 COPY gen_ai_calling.py .
 COPY requirements_service.txt  .
 RUN --mount=type=cache,target=/root/.cache/pip pip3 install -r requirements_service.txt --target "${LAMBDA_TASK_ROOT}"
