--- a/requirements_service.txt
+++ b/requirements_service.txt
@@ -1,7 +1,10 @@
-requests==2.28.1
 boto3==1.24.68
 streaming-form-data==1.11.0
 textblob==0.17.1
+opencv-python-headless==4.10.0.84
+numpy==1.26.4
+together==1.3.3
+requests==2.32.2
 openai
 anthropic
 google-generativeai
